--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "autoprefixer": "10.4.15",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "dayjs": "^1.11.9",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
