--- a/client/package.json
+++ b/client/package.json
@@ -24,6 +24,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "dayjs": "^1.11.9",
+    "flowbite": "^1.8.1",
+    "flowbite-react": "^0.6.0",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
     "postcss": "8.4.29",
