--- a/client/package.json
+++ b/client/package.json
@@ -29,6 +29,7 @@
     "flowbite-react": "^0.6.0",
     "lucide-react": "^0.274.0",
     "next": "13.4.19",
+    "next-auth": "^4.23.1",
     "postcss": "8.4.29",
     "react": "18.2.0",
     "react-dom": "18.2.0",
