--- a/server/.gitignore
+++ b/server/.gitignore
@@ -33,3 +33,8 @@ lerna-debug.log*
 !.vscode/tasks.json
 !.vscode/launch.json
 !.vscode/extensions.json
+
+# environment file
+**/*.env
+# 내부 API 간단 테스트 용 파일
+test/test.http
